--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
     <title>Personal Page</title>
 </head>
 <body>
-
     <h1>Khusnidin Kurbanov</h1>
-
-
     <p>
         My name is Khusnidin,I'm a junior student at AUCA studying the Software Engineering
     </p>
-
-    <img
-        src="https://cdn.imgchest.com/files/68abf4bedad7.png"
-        alt="Me"
-        width="300"
+    <img src="https://cdn.imgchest.com/files/68abf4bedad7.png" alt="Me" width="300"
     >
 
 </body>
